syntax="proto3";

package netpb;
option go_package = "github.com/swaggchain/swaggcore/v1/netpb";

message RoutingQuery {
  repeated string ids = 1;
}

message PeerInfo {
  string id = 1;
  repeated string addrs = 2;
}

message RoutingResponse {
  repeated PeerInfo peers = 1;
}